// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active 1`] = `
<div
  className="container task-bottom-pad"
>
  <span
    className="task-active-name"
  >
    Active mock
  </span>
  <span
    className="u-pull-right"
  >
    1
    /
    3
  </span>
  <span
    className="task-active-stopped pad-task u-pull-right"
  >
    Stopped 
    1
     times
  </span>
  <span
    className="pad-task u-pull-right"
  >
    <i
      className="fa fa-check success"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
    <i
      className="fa fa-stop danger"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
  </span>
</div>
`;

exports[`can't stop won't stop 1`] = `
<div
  className="container task-bottom-pad"
>
  <span
    className="task-active-name"
  >
    Active mock
  </span>
  <span
    className="u-pull-right"
  >
    1
    /
    3
  </span>
  
  <span
    className="pad-task u-pull-right"
  >
    <i
      className="fa fa-check success"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
    <i
      className="fa fa-stop danger"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
  </span>
</div>
`;

exports[`inactive 1`] = `
<div
  className="container task-bottom-pad"
>
  <span
    className="task-name"
  >
    mock
  </span>
  <span
    className="u-pull-right"
  >
    0
    /
    1
  </span>
  <span
    className="task-stopped pad-task u-pull-right"
  >
    Stopped 
    1
     times
  </span>
  <span
    className="pad-task u-pull-right"
  >
    <i
      className="fa fa-chevron-up success"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
    <i
      className="fa fa-times danger"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    />
  </span>
</div>
`;
